--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    provided "org.projectlombok:lombok:1.16.6"
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:support-v4:23.2.1'
     compile 'com.android.support:design:23.2.1'
-    provided "org.projectlombok:lombok:1.16.6"
+    compile 'com.google.android.gms:play-services:8.4.0'
+
 }
